# rapat_proglap

./: .gitignore  README.md  main.py  manage.py  package.json  pyproject.toml
accounts/: apps.py  models.py  signals.py  urls.py  views.py
belum_diinput/: apps.py  urls.py  views.py
dashboard/: admin.py  models.py  urls.py  views.py
data_rapat/: admin.py  apps.py  models.py  urls.py  views.py
data_rapat/migrations/: 0001_initial.py  0002_alter_datarapat_options_alter_datarapat_tanggal.py  0003_datarapatdb_delete_datarapat.py  0004_alter_datarapatdb_options_and_more.py  0005_alter_datarapatdb_updated_at.py  0006_alter_datarapatdb_id.py  0007_datarapatdb_id_random.py  0008_remove_datarapatdb_id_random_alter_datarapatdb_id_and_more.py
data_rapat/templatetags/: number_filters.py
perubahan_data/: admin.py  apps.py  models.py  urls.py  views.py
rapat_proglap/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: tailwindcss.css
staticfiles/CACHE/: manifest.json
staticfiles/css/: tailwindcss.css
staticfiles/src/: input.css
tambah_user/: admin.py  apps.py  models.py  urls.py  views.py
tambah_user/migrations/: 0001_initial.py
templates/: 404.html  base.html  copyright.html
templates/auth/: login.html
templates/belum_diinput/: index.html
templates/components/: belum_diinput.html  header.html  header_belum_diinput.html  header_data_rapat.html  header_tambah_user.html
templates/dashboard/: index.html
templates/data_rapat/: index.html
templates/perubahan_data/: index.html
templates/tambah_user/: index.html  test.html
(+33 files in other folders)
