[project]
name = "rapat-proglap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2.0",
    "django>=5.2.5",
    "django-compressor>=4.5.1",
    "django-minify-html>=1.12.0",
    "djhtml>=3.0.9",
    "gunicorn>=23.0.0",
    "polars>=1.32.3",
    "ruff>=0.12.9",
]
